Changes: showing user and patient age in the display list, logging currently logged in user name.

--- a/src/main/resources/templates/admissionAdd.html
+++ b/src/main/resources/templates/admissionAdd.html
@@ -31,7 +31,7 @@
                                 <br>
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
-                                        <label for="patient" class="form-label">Patient<span class="text-red">*</span></label>
+                                        <label for="patient" class="form-label">Patient<span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-md-9">
                                         <select id="patient"  th:field="*{admission_patient_id}" class="form-select" required>
@@ -44,7 +44,7 @@
 
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
-                                        <label for="doctor" class="form-label">Doctor<span class="text-red">*</span></label>
+                                        <label for="doctor" class="form-label">Doctor<span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-md-9">
                                         <select id="doctor"  th:field="*{admission_doctor_id}" class="form-select" required>
@@ -57,7 +57,7 @@
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
                                         <label for="admissionDate" class="form-label">Admission Date
-                                            <span class="text-red">*</span></label>
+                                            <span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div class="input-group date" id="datetimepicker">
@@ -76,7 +76,7 @@
                                     <div class="col-md-3 align-items-center">
                                         <label for="roomNumber" class="form-label">Room Number
                                             <span
-                                                    class="text-red">*</span></label>
+                                                    style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
@@ -96,7 +96,7 @@
                                     <div class="col-md-3 align-items-center">
                                         <label for="admissionReason" class="form-label">Admission Reason
                                             <span
-                                                    class="text-red">*</span></label>
+                                                    style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
