--- a/src/main/resources/templates/admissionUpdate.html
+++ b/src/main/resources/templates/admissionUpdate.html
@@ -32,7 +32,7 @@
                 <input type="number" th:field="*{admissionId}" hidden>
                 <div class="row g-3 mb-3">
                   <div class="col-md-3 align-items-center">
-                    <label for="patient" class="form-label">Patient<span class="text-red">*</span></label>
+                    <label for="patient" class="form-label">Patient<span style="color: red;">*</span></label>
                   </div>
                   <div class="col-md-9">
                     <span class="form-control" id="patient" th:text="${admission.patient.firstname + ' ' + admission.patient.lastName}"></span>
@@ -43,7 +43,7 @@
 
                 <div class="row g-3 mb-3">
                   <div class="col-md-3 align-items-center">
-                    <label for="doctor" class="form-label">Doctor<span class="text-red">*</span></label>
+                    <label for="doctor" class="form-label">Doctor<span style="color: red;">*</span></label>
                   </div>
                   <div class="col-md-9">
                     <select id="doctor"  th:field="*{admission_doctor_id}" class="form-select" required>
@@ -56,7 +56,7 @@
                 <div class="row g-3 mb-3">
                   <div class="col-md-3 align-items-center">
                     <label for="admissionDate" class="form-label">Admission Date
-                      <span class="text-red">*</span></label>
+                      <span style="color: red;">*</span></label>
                   </div>
                   <div class="col-sm-9">
                       <span class="form-control" id="admissionDate" th:text="${admission.admissionDateString}"></span>
@@ -68,7 +68,7 @@
                   <div class="col-md-3 align-items-center">
                     <label for="roomNumber" class="form-label">Room Number
                       <span
-                              class="text-red">*</span></label>
+                              style="color: red;">*</span></label>
                   </div>
                   <div class="col-sm-9">
                     <div>
@@ -88,7 +88,7 @@
                   <div class="col-md-3 align-items-center">
                     <label for="admissionReason" class="form-label">Admission Reason
                       <span
-                              class="text-red">*</span></label>
+                              style="color: red;">*</span></label>
                   </div>
                   <div class="col-sm-9">
                     <div>
@@ -107,7 +107,7 @@
                 <div class="row g-3 mb-3">
                   <div class="col-md-3 align-items-center">
                     <label for="dischargeDate" class="form-label">Discharge Date
-                      <span class="text-red">*</span></label>
+                      <span style="color: red;">*</span></label>
                   </div>
                   <div class="col-sm-9">
                     <div class="input-group date" id="datetimepicker2">
