--- a/src/main/resources/templates/appointmentUpdate.html
+++ b/src/main/resources/templates/appointmentUpdate.html
@@ -34,7 +34,7 @@
                                     <div class="col-md-3 align-items-center">
                                         <label for="patient" class="form-label">Patient
                                             <span
-                                                    class="text-red">*</span></label>
+                                                    style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
@@ -49,7 +49,7 @@
 
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
-                                        <label for="doctor" class="form-label">Doctor <span class="text-red">*</span></label>
+                                        <label for="doctor" class="form-label">Doctor <span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-md-9">
                                         <select id="doctor"  th:field="*{appointment_doctor_id}" class="form-select" required>
@@ -62,7 +62,7 @@
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
                                         <label for="startTime" class="form-label">Start Time
-                                            <span class="text-red">*</span></label>
+                                            <span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
@@ -79,7 +79,7 @@
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
                                         <label for="endTime" class="form-label">End Time
-                                            <span class="text-red">*</span></label>
+                                            <span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
@@ -97,7 +97,7 @@
                                     <div class="col-md-3 align-items-center">
                                         <label for="roomNumber" class="form-label">Room Number
                                             <span
-                                                    class="text-red">*</span></label>
+                                                    style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
@@ -117,7 +117,7 @@
                                     <div class="col-md-3 align-items-center">
                                         <label for="notes" class="form-label">Notes
                                             <span
-                                                    class="text-red">*</span></label>
+                                                    style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
