--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -39,7 +39,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Address</th>
-                    <th>Date of birth</th>
+                    <th>Age</th>
                     <th>Phone Number</th>
                     <th>Email</th>
                     <th>Diagnosis</th>
@@ -53,7 +53,7 @@
                     <td th:text="${patient.firstname}"></td>
                     <td th:text="${patient.lastName}"></td>
                     <td th:text="${patient.address}"></td>
-                    <td th:text="${patient.dateOfBirth}"></td>
+                    <td th:text="${patient.age}"></td>
                     <td th:text="${patient.phoneNumber}"></td>
                     <td th:text="${patient.email}"></td>
                     <td th:text="${patient.diagnosis}"></td>
