--- a/src/main/resources/templates/userAdd.html
+++ b/src/main/resources/templates/userAdd.html
@@ -31,7 +31,7 @@
                             <div class="row g-3 mb-3">
                                 <div class="col-md-3 align-items-center">
                                     <label for="firstName" class="form-label">First Name <span
-                                            class="text-red">*</span></label>
+                                            style="color: red;">*</span></label>
                                 </div>
                                 <div class="col-md-9">
                                     <div>
@@ -47,7 +47,7 @@
                             <div class="row g-3 mb-3">
                                 <div class="col-md-3 align-items-center">
                                     <label for="lastName" class="form-label">Last Name <span
-                                            class="text-red">*</span></label>
+                                            style="color: red;">*</span></label>
                                 </div>
                                 <div class="col-sm-9">
                                     <div>
@@ -64,7 +64,7 @@
                                 <div class="col-md-3 align-items-center">
                                     <label for="phoneNumber" class="form-label">Phone Number
                                         <span
-                                                class="text-red">*</span></label>
+                                                style="color: red;">*</span></label>
                                 </div>
                                 <div class="col-sm-9">
                                     <div>
@@ -83,13 +83,13 @@
                                 <div class="col-md-3 align-items-center">
                                     <label for="email" class="form-label">Email
                                         <span
-                                                class="text-red">*</span></label>
+                                                style="color: red;">*</span></label>
                                 </div>
                                 <div class="col-sm-9">
                                     <div>
                                         <input type="email" class="form-control"
                                                id="email"
-                                               name="email" min="0"
+                                               name="email"
                                                th:field="*{email}"
                                                required>
                                         <div class="invalid-feedback">Invalid Email
@@ -100,7 +100,7 @@
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
                                         <label for="dateOfBirth" class="form-label">Date Of Birth
-                                            <span class="text-red">*</span></label>
+                                            <span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
@@ -118,13 +118,12 @@
                                     <div class="col-md-3 align-items-center">
                                         <label for="password" class="form-label">Password
                                             <span
-                                                    class="text-red">*</span></label>
+                                                    style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
                                             <input type="password" class="form-control"
                                                    id="password"
-                                                   name="email" min="0"
                                                    th:field="*{password}"
                                                    required>
                                             <div class="invalid-feedback">Invalid Password
