--- a/src/main/resources/templates/appointmentAdd.html
+++ b/src/main/resources/templates/appointmentAdd.html
@@ -31,7 +31,7 @@
                                 <br>
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
-                                        <label for="patient" class="form-label">Patient<span class="text-red">*</span></label>
+                                        <label for="patient" class="form-label">Patient<span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-md-9">
                                         <select id="patient"  th:field="*{appointment_patient_id}" class="form-select" required>
@@ -44,7 +44,7 @@
 
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
-                                        <label for="doctor" class="form-label">Doctor<span class="text-red">*</span></label>
+                                        <label for="doctor" class="form-label">Doctor<span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-md-9">
                                         <select id="doctor"  th:field="*{appointment_doctor_id}" class="form-select" required>
@@ -57,7 +57,7 @@
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
                                         <label for="startTime" class="form-label">Start Time
-                                            <span class="text-red">*</span></label>
+                                            <span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div class="input-group date" id="datetimepicker">
@@ -74,7 +74,7 @@
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
                                         <label for="endTime" class="form-label">End Time
-                                            <span class="text-red">*</span></label>
+                                            <span style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
@@ -92,7 +92,7 @@
                                     <div class="col-md-3 align-items-center">
                                         <label for="roomNumber" class="form-label">Room Number
                                             <span
-                                                    class="text-red">*</span></label>
+                                                    style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
@@ -112,7 +112,7 @@
                                     <div class="col-md-3 align-items-center">
                                         <label for="notes" class="form-label">Notes
                                             <span
-                                                    class="text-red">*</span></label>
+                                                    style="color: red;">*</span></label>
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
