--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,16 +18,16 @@
         <img src="/icons/building-svgrepo-com.svg" alt="Your Icon" width="50" height="50" class="me-2">
         <span class="fs-4 mb-3"> Hospital Management System</span>
     </div>
-    <form action="#" th:action="@{/sign-in}" th:object="${signInModel}" method="post">
+    <form action="#" th:action="@{/login}"  method="post">
 <!--        <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
 
 
         <div class="form-floating mt-3" >
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" th:field="*{email}">
-            <label for="floatingInput">Email address</label>
+            <input type="text" class="form-control" id="floatingInput"  name="username" >
+            <label for="floatingInput">User Name</label>
         </div>
         <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" th:field="*{password}">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
             <label for="floatingPassword">Password</label>
         </div>
 
