--- a/src/main/resources/templates/userAdd.html
+++ b/src/main/resources/templates/userAdd.html
@@ -60,6 +60,24 @@
                                 </div>
 
                             </div>
+
+                            <div class="row g-3 mb-3">
+                                <div class="col-md-3 align-items-center">
+                                    <label for="username" class="form-label">User Name <span
+                                            style="color: red;">*</span></label>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div>
+                                        <input type="text" class="form-control"
+                                               id="username"
+                                               th:field="*{username}"
+                                               maxlength="255" required>
+                                        <div class="invalid-feedback">Invalid Description</div>
+                                    </div>
+                                </div>
+
+                            </div>
+
                             <div class="row g-3 mb-3">
                                 <div class="col-md-3 align-items-center">
                                     <label for="phoneNumber" class="form-label">Phone Number
@@ -113,6 +131,33 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="row g-3 mb-3">
+                                    <div class="col-md-3 align-items-center">
+                                        <label for="selectedRoles" class="form-label">Select Roles<span style="color: red;">*</span></label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <select multiple="multiple" id="selectedRoles" class="form-select" required>
+                                            <option th:each="role : ${roles}" th:value="${role.roleId}" th:text="${role.name}"></option>
+                                        </select>
+                                        <div class="invalid-feedback">Invalid Role</div>
+
+                                        <!-- Hidden input to store selected roles -->
+                                        <input type="hidden" id="hiddenSelectedRoles" name="selectedRoles">
+
+                                        <!-- JavaScript to update hidden input with selected roles -->
+                                        <script th:inline="javascript">
+                                            /*<![CDATA[*/
+                                            document.getElementById('selectedRoles').addEventListener('change', function() {
+                                                var selectedRoles = Array.from(this.selectedOptions).map(option => option.value);
+                                                document.getElementById('hiddenSelectedRoles').value = selectedRoles.join(',');
+                                            });
+                                            /*]]>*/
+                                        </script>
+                                    </div>
+                                </div>
+
+
 
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
