--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -31,6 +31,7 @@
     <div class="content" id="content">
         <div class="container-fluid">
             <h2 class="mb-3 mt-3">Users</h2>
+
             <a th:href="@{/user/add}" class="btn btn-primary mb-3"><i data-feather="plus-circle"></i> Add User</a>
 
             <table class="table no-margin  table-bordered table-striped" >
@@ -38,6 +39,7 @@
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
+                    <th>Username</th>
                     <th>Phone Number</th>
                     <th>Email</th>
                     <th>Age</th>
@@ -50,6 +52,7 @@
                 <tr th:each="user : ${users}">
                     <td th:text="${user.getFirstname()}"></td>
                     <td th:text="${user.getLastName()}"></td>
+                    <td th:text="${user.getUsername()}"></td>
                     <td th:text="${user.getPhoneNumber()}"></td>
                     <td th:text="${user.getEmail()}"></td>
                     <td th:text="${user.getAge()}"></td>
