Added: Role Groups , allowing users with GROUP- MANAGEMENT, only to be able to see doctors navigation_link

--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -28,7 +28,7 @@
                     Users
                 </a>
             </li>
-            <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+            <li class="nav-item" sec:authorize="hasAuthority('GROUP_MANAGEMENT')">
                 <a th:href="@{/doctors}" class="nav-link link-dark">
                     <i data-feather="heart"></i>
                     Doctors
